Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8819

QWinEventNotifier cannot handle more than 62 handles

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.10.0 Alpha
    • 4.0.0, 4.7.3, 4.8.0, 4.8.1, 5.5.1
    • Core: Event loop
    • None
    • Windows
    • 85403d0af06a0728c9c6f1bd7a6f224949cd894e

    Description

      It's not possible to use more than 62 QWinEventNotifier objects.

      E.g. when using more than 62 QLocalSocket objects on Windows, the following warning is printed:
      QWinEventNotifier: Cannot have more than 62 enabled at one time

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jbornema Joerg Bornemann
              rmcgover Rohan McGovern (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes